# Temp-File-Web

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
nginx/: acme-challenge.conf.template  file.conf  file.conf.template  nginx.conf.template  site-acme.conf.template  site-auth-map.conf.template  site-common.conf.template  site-http.conf.template  site-https.conf.template
rust-tfw/: Cargo.toml
rust-tfw/src/: config.rs  http.rs  i18n.rs  main.rs  util.rs
rust-tfw/src/cmd/: auth.rs  cert.rs  config_cmd.rs  doctor.rs  info.rs  logs.rs  ls.rs  mod.rs  passwd.rs  restart.rs  session.rs  status.rs  test.rs  time.rs  uninstall.rs  update.rs  urls.rs
scripts/: install.sh  smoke-test.sh
scripts/lib/: acme.sh  auth.sh  common.sh  deps.sh  i18n.sh  prompt.sh  template.sh  validate.sh
templates/: file-upload.htpasswd.example  tfw.conf.template
web/: file-browser.html  file-browser.html.template  file-upload.html  file-upload.html.template  shared-styles.css.template
