[package]
name = "tfw"
version = "0.1.0"
edition = "2021"
description = "Temp File Web CLI - Nginx-based file sharing site management"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "cookies"], default-features = false }
hickory-resolver = "0.24"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2"
nix = { version = "0.29", features = ["fs", "user", "process"] }
rand = "0.8"
regex = "1"
dialoguer = "0.11"
which = "7"
base64 = "0.22"
